[package]
name = "pingora-http-proxy"
version = "0.1.0"
edition = "2024"
description = "使用 Pingora 实现一个 loadbalancer"
[dependencies]
# web
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

# seriali
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# time
chrono = { version = "0.4.40", features = ["serde"] }
dashmap = "6.1.0"

# encrypt
argon2 = "0.5.3"
anyhow = "1.0.98"
rand = "0.8"
